registry/registry/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
