registry/registry/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: registry
  namespace: registry
spec:
  ingressClassName: nginx
  rules:
  - host: registry.csepulveda.net
    http:
      paths:
      - backend:
          service:
            name: registry
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - registry.csepulveda.net
    secretName: registry.csepulveda.net-tls
